--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,4 @@
 export(create_mz_rt_scatter_plots)
 export(get_CV)
 export(get_median_vs_running_order)
+export(make_t_SNE_graph_for_metabolites_group)
