function of t_SNE_for_plate_effects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ export(create_mz_rt_scatter_plots)
 export(get_CV)
 export(get_median_vs_running_order)
 export(make_t_SNE_graph_for_metabolites_group)
+export(make_t_SNE_graph_for_plate_effects)
