--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(create_mz_rt_scatter_plots)
 export(get_CV)
 export(get_imputated_data)
+export(get_median_vs_SD)
 export(get_median_vs_running_order)
 export(get_missingness_vs_running_order)
 export(make_t_SNE_graph_for_metabolites_group)
