--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(get_CV)
 export(get_imputated_data)
 export(get_median_vs_SD)
 export(get_median_vs_running_order)
+export(get_metabolites_group_by_PCA)
 export(get_missingness_vs_running_order)
 export(get_plate_effect_by_PCA)
 export(make_t_SNE_graph_for_metabolites_group)
