--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(get_median_vs_running_order)
 export(get_metabolites_group_by_PCA)
 export(get_missingness_vs_running_order)
 export(get_plate_effect_by_PCA)
+export(get_waterfall_plots)
 export(make_t_SNE_graph_for_metabolites_group)
 export(make_t_SNE_graph_for_plate_effects)
