update get missingness comparision

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(get_median_vs_SD)
 export(get_median_vs_running_order)
 export(get_metabolites_group_by_PCA)
 export(get_missingness_vs_running_order)
+export(get_missingness_vs_running_order_comparision)
 export(get_plate_effect_by_PCA)
 export(get_waterfall_plots)
 export(make_t_SNE_graph_for_metabolites_group)
