--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,3 +14,4 @@ export(get_plate_effect_by_PCA)
 export(get_waterfall_plots)
 export(make_t_SNE_graph_for_metabolites_group)
 export(make_t_SNE_graph_for_plate_effects)
+export(trt_logit_model)
