--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,3 +15,4 @@ export(get_waterfall_plots)
 export(make_t_SNE_graph_for_metabolites_group)
 export(make_t_SNE_graph_for_plate_effects)
 export(trt_logit_model)
+export(trt_logit_model_with_age_gender)
