--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,6 @@ export(get_plate_effect_by_PCA)
 export(get_waterfall_plots)
 export(make_t_SNE_graph_for_metabolites_group)
 export(make_t_SNE_graph_for_plate_effects)
+export(my_subtraction2)
 export(trt_logit_model)
 export(trt_logit_model_with_age_gender)
